@@ -5,9 +5,9 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<copyright>(C) 2005 - 2013 Open Source Matters. All rights reserved</copyright>
-	<license>GNU General Public License version 2 or later; see     LICENSE.txt</license>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
 	<version>3.1.5</version>
-	<creationDate>July 2013</creationDate>
+	<creationDate>August 2013</creationDate>
 	<description>FILES_JOOMLA_XML_DESCRIPTION</description>
 
 	<scriptfile>administrator/components/com_admin/script.php</scriptfile>
